--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,38 @@ DESKTOP STYLES
         display: block;
     }
 
+.intro-logo {
+  margin-top: 300px;
+  margin-left: 800px;
+  width: 300px;
+  position: center;
+}
+.centered {
+  text-align: center;
+}
+
+button {
+  background-color: #3c94cd;
+  border: none;
+  border-radius: 2px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+intro-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
  .topnav{
       text-align: center;
       padding:5px 0;
