--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,12 @@
 
 /* fonts */
 
+@font-face {
+   font-family: 'Barqish';
+   src: url('Barqish.otf') format('opentype');
+   font-weight: normal;
+ }
+
 
 
 /* MAIN CONTENT --------------------------------- */
@@ -26,7 +32,33 @@ body{
     margin: auto;
     display: block;
     padding-top: 20px;
-    padding-bottom: 20px;
+
+}
+
+.intro-logo {
+  width: 300px;
+  height: auto;
+  margin: auto;
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.centered {
+  text-align: center;
+}
+
+input[type=submit] {
+ background-color: #3c94cd;
+ padding: 15px 27px;
+ -moz-border-radius: 5px;
+ -webkit-border-radius: 5px;
+ border-radius: 2px;
+ color: #fff;
+ font-family: 'Josefin Sans', sans-serif;
+ font-size: 1em;
+ text-decoration: none;
+ border: none;
+
 }
 
 
@@ -35,8 +67,22 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    min-height:100px;
+    min-height:150px;
     min-width: 100px;
+}
+.header-img h2 {
+  color: white;
+  font-family: 'Barqish';
+  text-align: center;
+  /* padding: 20px; */
+
+  padding-bottom: 20px;
+  margin-top: 0;
+
+  font-size: 4em;
+  justify-content: center;
+
+  text-shadow: 2px 2px 4px #773819;
 }
 
 h1 {
@@ -103,69 +149,116 @@ a.active {
 	top: 0;
 }
 
-
 /* --------
-  ---------------------------------------------END OF NAV BAR */
+  -------------------END OF NAV BAR */
 
   /* --------
 DESKTOP STYLES
 -------- */
 @media only screen and (min-width:700px){
 
-  #logo {
-        /* ------ Max width to keep logo image from being larger than intended ------ */
-        width: 350px;
-        /* padding-bottom: 10px; */
-        /* margin: auto; */
-        margin-bottom: -5px;
-        padding-top: 30px;
-        display: block;
-    }
+  /* INTRO, LANDING PAGE ------------------------------- */
 
-.intro-logo {
-  margin-top: 300px;
-  margin-left: 800px;
-  width: 300px;
-  position: center;
-}
-.centered {
-  text-align: center;
+  .intro-logo {
+    margin-top: 300px;
+    margin-left: 800px;
+    width: 300px;
+    position: center;
+    display: inline-block;
+  }
+  .centered {
+    text-align: center;
+  }
+
+  button {
+    background-color: #3c94cd;
+    border: none;
+    border-radius: 2px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    font-family: 'Josefin Sans', sans-serif;
+  }
+
+
+
+  input[type=submit] {
+   background-color: #3c94cd;
+   padding: 15px 32px;
+   -moz-border-radius: 5px;
+   -webkit-border-radius: 5px;
+   border-radius: 2px;
+   color: #fff;
+   font-family: 'Josefin Sans', sans-serif;
+   font-size: 1em;
+   text-decoration: none;
+   border: none;
+   display: inline-block;
+  }
+
+  #yes-button {
+    display: inline-block;
+    text-align: center;
+    margin: auto;
+  }
+
+  #no-button {
+    display: inline-block;
+    text-align: center;
+    margin: auto;
+  }
+
+/* INDEX PAGE ------------------------------------ */
+
+.topnav{
+     text-align: center;
+     padding:5px 0;
+ }
+ .topnav a {
+     display: inline-grid;
+     grid-auto-flow: column;
+ }
+ .topnav a.icon {
+     display: none;
+ }
+
+ .header-img {
+     height: 30vh;
+
+ }
+    #logo {
+    /* ------ Max width to keep logo image from being larger than intended ------ */
+    width: 350px;
+    height: auto;
+    margin: 0 0 0 25px;
+    display: inline-block;
 }
 
-button {
-  background-color: #3c94cd;
-  border: none;
-  border-radius: 2px;
+.header-img {
+    height: 30vh;
+
+}
+
+.header-img h2 {
   color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
+  font-family: 'Barqish';
+  text-align: right;
+  /* padding: 20px; */
+  padding-right: 50px;
+  padding-bottom: 70px;
+  font-size: 6em;
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  font-family: 'Josefin Sans', sans-serif;
+  float: right;
+  text-shadow: 2px 2px 4px #773819;
 }
 
-intro-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-}
-
- .topnav{
-      text-align: center;
-      padding:5px 0;
-  }
-  .topnav a {
-      display: inline-grid;
-      grid-auto-flow: column;
-  }
-  .topnav a.icon {
-      display: none;
-  }
-
-  .header-img {
-      height: 35vh;
+  .color-bar {
+    background: rgb(231,227,224);
+    background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(119,56,25,1) 100%);
+    height: 150px;
   }
