--- a/styles.css
+++ b/styles.css
@@ -23,18 +23,25 @@ body{
   box-sizing: border-box;
 }
 
-
-
-#logo {
-    /* ------ Max width to keep logo image from being larger than intended ------ */
-    width: 300px;
-    height: auto;
-    margin: auto;
-    display: block;
-    padding-top: 20px;
-
+h1 {
+  text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 2em;
 }
 
+h2 {
+  font-family: 'Josefin Sans', sans-serif;
+  color: black;
+  font-size: 1.5em;
+}
+
+p {
+	color: black;
+    font-size: 1em;
+    line-height: 1.5;
+}
+
+/* INTRO PAGE */
 .intro-logo {
   width: 300px;
   height: auto;
@@ -61,47 +68,8 @@ input[type=submit] {
 
 }
 
+/* INDEX PAGE */
 
-.header-img {
-    background-image: url("images/headerimg4.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    min-height:150px;
-    min-width: 100px;
-}
-.header-img h2 {
-  color: white;
-  font-family: 'Barqish';
-  text-align: center;
-  /* padding: 20px; */
-
-  padding-bottom: 20px;
-  margin-top: 0;
-
-  font-size: 4em;
-  justify-content: center;
-
-  text-shadow: 2px 2px 4px #773819;
-}
-
-h1 {
-  text-align: center;
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: 2em;
-}
-
-h2 {
-  font-family: 'Josefin Sans', sans-serif;
-  color: black;
-  font-size: 1.5em;
-}
-
-p {
-	color: black;
-    font-size: 1em;
-    line-height: 1.5;
-}
 
 /* ---------------------------------------------------NAV BAR */
 .topnav {
@@ -151,6 +119,55 @@ a.active {
 
 /* --------
   -------------------END OF NAV BAR */
+
+#logo {
+    /* ------ Max width to keep logo image from being larger than intended ------ */
+    width: 300px;
+    height: auto;
+    margin: auto;
+    display: block;
+    padding-top: 20px;
+
+}
+
+
+.header-img {
+    background-image: url("images/headerimg4.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    min-height:150px;
+    min-width: 100px;
+    padding-bottom: 0px;
+    margin-bottom:0px;
+}
+
+.header-img h2 {
+  color: white;
+  font-family: 'Barqish';
+  text-align: center;
+  /* padding: 20px; */
+
+  padding-bottom: 20px;
+  margin-top: 0;
+
+  font-size: 4em;
+  justify-content: center;
+
+  text-shadow: 2px 2px 4px #773819;
+}
+
+
+.index-hero {
+  background-image: url("images/index-hero.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  min-height:250px;
+  min-width: 100px;
+  padding-top: 0px;
+  margin-top: 0px;
+}
 
   /* --------
 DESKTOP STYLES
@@ -261,4 +278,9 @@ DESKTOP STYLES
     background: rgb(231,227,224);
     background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(119,56,25,1) 100%);
     height: 150px;
+  }
+
+  .index-hero {
+      height: 50vh;
+
   }
