--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@
 
 /* MAIN CONTENT --------------------------------- */
 body{
-  background: white;
+  background: rgb(239,121,65);
+background: radial-gradient(circle, rgba(239,121,65,1) 0%, rgba(119,56,25,1) 100%);
   font-size: 16px;
  font-family: 'Josefin Sans', sans-serif;
   margin:0;
@@ -35,10 +36,22 @@ h2 {
   font-size: 1.5em;
 }
 
+h3 {
+  text-align: center;
+  color: white;
+  font-family: 'Barqish';
+  font-size: 2.5em;
+
+}
+
 p {
-	color: black;
+	color: white;
     font-size: 1em;
     line-height: 1.5;
+    font-family: 'Josefin Sans', sans-serif;
+    padding: 25px;
+    padding-top: 10px;
+    text-align: center;
 }
 
 
@@ -54,6 +67,7 @@ p {
 }
 .centered {
   text-align: center;
+  padding-top: 20px;
 }
 
 input[type=submit] {
@@ -74,10 +88,10 @@ input[type=submit] {
 
 
 /* ---------------------------------------------------NAV BAR */
-.topnav {
-	overflow: hidden;
+/* .topnav {
+	overflow: hidden; */
   /* background-color: #ab907b; */
-  background-color: #e7e3e0;
+  /* background-color: #e7e3e0;
   border: 1px groove #773819;
 border-radius: 2px 2px 2px 2px;
 
@@ -94,9 +108,9 @@ border-radius: 2px 2px 2px 2px;
 	color: #3c94cd;
 	}
 a.active {
-	display: inline-grid;
+	display: inline-grid; */
 	/* background-color:rgba(40,40,40,.6); */
-	color: #3c94cd;
+	/* color: #3c94cd;
 }
 .topnav.responsive {
   position: relative;
@@ -105,9 +119,9 @@ a.active {
 .topnav.responsive a {
 	float: none;
 	display: block;
-	text-align: left;
+	text-align: left; */
 	/* border-bottom:1px solid #000; */
-}
+/* }
 .topnav a.icon {
 	float: right;
 	display: block;
@@ -117,22 +131,22 @@ a.active {
 	position: absolute;
 	right: 0;
 	top: 0;
-}
+} */
 
 /* --------
   -------------------END OF NAV BAR */
 
-#logo {
+/* #logo { */
     /* ------ Max width to keep logo image from being larger than intended ------ */
-    width: 300px;
+    /* width: 300px;
     height: auto;
     margin: auto;
     display: block;
     padding-top: 20px;
     padding-bottom: 20px;
-    
 
-}
+
+} */
 
 
 .header-img {
@@ -146,7 +160,7 @@ a.active {
     margin-bottom:0px;
 }
 
-.orange-bar h2 {
+.index-hero h2 {
   color: white;
   font-family: 'Barqish';
   text-align: center;
@@ -200,6 +214,35 @@ a.active {
   margin-top: 0px;
 }
 
+.off-white {
+  background-color: #e7e3e0;
+  height: 18vh;
+}
+
+.button {
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.button2 {
+  background-color: #773819;
+  color: #e7e3e0;
+  border: 2px solid #773819;
+}
+
+.button2:hover {
+  background-color: #3c94cd;
+  color: #e7e3e0;
+  border: 2px solid #3c94cd;
+}
+
   /* --------
 DESKTOP STYLES
 -------- */
@@ -216,6 +259,7 @@ DESKTOP STYLES
   }
   .centered {
     text-align: center;
+    padding-top: 20px;
   }
 
   button {
@@ -263,7 +307,7 @@ DESKTOP STYLES
 
 /* INDEX PAGE ------------------------------------ */
 
-.topnav{
+/* .topnav{
      text-align: center;
      padding:5px 0;
  }
@@ -276,16 +320,16 @@ DESKTOP STYLES
  }
 
 
-    #logo {
+    #logo { */
     /* ------ Max width to keep logo image from being larger than intended ------ */
     /* width: 350px;
     height: auto;
     margin: 0 0 0 250px;
     display: inline-block; */
-    max-width: 50%;
+    /* max-width: 50%;
     margin: auto;
     display: block;
-}
+} */
 
 .header-img {
     height: 20vh;
@@ -293,7 +337,7 @@ DESKTOP STYLES
 
 }
 
-.orange-bar h2 {
+.index-hero h2 {
   color: white;
   font-family: 'Barqish';
   text-align: center;
@@ -314,10 +358,16 @@ DESKTOP STYLES
   }
 
   .index-hero {
-      height: 50vh;
+      height: 60vh;
       margin-top: 0px;
       padding-top: 0px;
 
+  }
+
+  .off-white {
+    background: rgb(231,227,224);
+background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 98%, rgba(60,148,205,1) 100%);
+    height: 11.5vh;
   }
 
 
