--- a/styles.css
+++ b/styles.css
@@ -31,15 +31,23 @@ h1 {
 }
 
 h2 {
-  font-family: 'Josefin Sans', sans-serif;
-  color: black;
-  font-size: 1.5em;
+  color: white;
+  font-family: 'Barqish';
+  text-align: center;
+  /* padding: 20px; */
+  padding-bottom: 20px;
+  margin-top: 5px;
+
+  font-size: 3em;
+  justify-content: center;
+  text-shadow: 2px 2px 4px #773819;
+
 }
 
 h3 {
   text-align: center;
   color: white;
-  font-family: 'Barqish';
+  font-family: 'Josefin Sans';
   font-size: 2.5em;
 
 }
@@ -212,10 +220,13 @@ a.active {
   min-width: 100px;
   padding-top: 0px;
   margin-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
 }
 
 .off-white {
-  background-color: #e7e3e0;
+  background: rgb(231,227,224);
+background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 98%, rgba(60,148,205,1) 100%);
   height: 18vh;
 }
 
@@ -241,6 +252,10 @@ a.active {
   background-color: #3c94cd;
   color: #e7e3e0;
   border: 2px solid #3c94cd;
+}
+
+hr {
+  border-top: 3px solid white;
 }
 
   /* --------
