--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,11 @@ h1 {
   text-align: center;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 2em;
+  color: white;
 }
 
 h2 {
-  color: white;
+  color: white !important;
   font-family: 'Barqish';
   text-align: center;
   /* padding: 20px; */
@@ -40,7 +41,7 @@ h2 {
 
   font-size: 3em;
   justify-content: center;
-  text-shadow: 2px 2px 4px #773819;
+
 
 }
 
@@ -158,7 +159,7 @@ a.active {
 
 
 .header-img {
-    background-image: url("images/headerimg4.jpg");
+    background-image: url("images/landscape-barn.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -177,7 +178,7 @@ a.active {
   margin-top: 0;
   font-size: 4em;
   justify-content: center;
-  text-shadow: 2px 2px 4px #773819;
+
 }
 .orange-bar {
   background: rgb(239,121,65);
@@ -224,6 +225,11 @@ a.active {
   padding-bottom: 0px;
 }
 
+.index-hero h2 {
+  text-shadow: 2px 2px 4px #773819;
+
+}
+
 .off-white {
   background: rgb(231,227,224);
 background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 98%, rgba(60,148,205,1) 100%);
@@ -257,6 +263,36 @@ background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 9
 hr {
   border-top: 3px solid white;
 }
+
+.products h1{
+  color: black;
+  font-size: 2em;
+}
+
+.blue {
+  color: #3c94cd;
+  text-align: center;
+  font-family: 'Barqish';
+  font-size: 4em;
+}
+
+.products {
+  background-color: white;
+
+    min-height:400px;
+    padding-top: 10px;
+    padding-bottom:10px;
+}
+
+
+.products-img {
+  width: 100%;
+  display: inline-block;
+}
+
+.column {
+    width: 100%;
+  }
 
   /* --------
 DESKTOP STYLES
@@ -347,8 +383,9 @@ DESKTOP STYLES
 } */
 
 .header-img {
-    height: 20vh;
+    height: 55vh;
     margin-top: 30px;
+    background-position: top center;
 
 }
 
@@ -382,7 +419,19 @@ DESKTOP STYLES
   .off-white {
     background: rgb(231,227,224);
 background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 98%, rgba(60,148,205,1) 100%);
-    height: 11.5vh;
+    height: 20vh;
+  }
+
+  #about {
+    padding-top: 20px;
+
+  }
+
+
+  p {
+    padding-right: 300px;
+    padding-left: 300px;
+    text-align: left;
   }
 
 
@@ -402,4 +451,28 @@ background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 9
   float: right;
   padding-right: 25px;
   width: 250px;
+}
+
+.products {
+  background-color: white;
+
+}
+
+.products-img {
+  width: 40%;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
