--- a/styles.css
+++ b/styles.css
@@ -269,11 +269,12 @@ hr {
   font-size: 2em;
 }
 
-.blue {
-  color: #3c94cd;
+.brown-shadow {
+  color: #ef7941;
   text-align: center;
   font-family: 'Barqish';
   font-size: 4em;
+  text-shadow: 2px 2px 4px #773819;
 }
 
 .products {
@@ -292,6 +293,24 @@ hr {
 
 .column {
     width: 100%;
+  }
+
+  .brown-text {
+    color: #773819;
+    font-size: 3em;
+    margin-top: 0px;
+  }
+
+  ul {
+    list-style-image: url('images/jar bullet.png');
+    color: white;
+    text-align: center;
+    list-style-position: inside;
+  }
+
+  li {
+    padding: 15px;
+    align-items: center;
   }
 
   /* --------
@@ -460,11 +479,23 @@ background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 9
 
 .products-img {
   width: 40%;
+  float: left;
+  margin-right: 15px;
+}
+
+.brown-shadow {
+text-align: left;
+}
+
+.brown-text {
+  color: #773819;
+  font-size: 3em;
+  margin-top: 0px;
 }
 
 .column {
   float: left;
-  width: 33.33%;
+  width: 50%;
   padding: 5px;
   margin-right: auto;
   margin-left: auto;
