--- a/styles.css
+++ b/styles.css
@@ -372,6 +372,18 @@ box-sizing: border-box;
 
 
 
+footer{
+    text-align: center;
+    /* background-color: #4682b4; */
+    /* opacity: 0.7; */
+    padding-top: 20px;
+    color: white;
+    font-family: 'Josefin Sans';
+    /* background-color: #e7e3e0; */
+}
+
+
+
 
   /* --------
 DESKTOP STYLES
@@ -594,3 +606,28 @@ text-align: left;
       margin-top: 2%;
       margin-bottom: 2%;
   }
+
+  .footer-nav {
+    float: left;
+    text-align: left;
+    margin-left: 25px;
+    }
+
+  .footer-contact {
+    float: right;
+    text-align: right;
+    margin-right: 25px;
+  }
+
+  .wrapper {
+    text-align: center;
+    justify-content: center;
+    display: inline-block;
+    margin: auto;
+
+  }
+
+  footer{
+    min-height: 150px;
+  }
+  ]
