--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ h2 {
   text-align: center;
   /* padding: 20px; */
   padding-bottom: 20px;
-  margin-top: 5px;
+  margin-top: 10px;
 
   font-size: 3em;
   justify-content: center;
@@ -59,7 +59,7 @@ p {
     line-height: 1.5;
     font-family: 'Josefin Sans', sans-serif;
     padding: 25px;
-    padding-top: 10px;
+    padding-top: 0;
     text-align: center;
 }
 
@@ -92,6 +92,20 @@ input[type=submit] {
  border: none;
 
 }
+button[type=submit] {
+ background-color: #3c94cd;
+ padding: 15px 27px;
+ -moz-border-radius: 5px;
+ -webkit-border-radius: 5px;
+ border-radius: 2px;
+ color: #fff;
+ font-family: 'Josefin Sans', sans-serif;
+ font-size: 1em;
+ text-decoration: none;
+ border: none;
+
+}
+
 
 /* INDEX PAGE */
 
@@ -167,6 +181,7 @@ a.active {
     min-width: 100px;
     padding-bottom: 0px;
     margin-bottom:0px;
+
 }
 
 .index-hero h2 {
@@ -233,7 +248,11 @@ a.active {
 .off-white {
   background: rgb(231,227,224);
 background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 98%, rgba(60,148,205,1) 100%);
-  height: 18vh;
+  height: 33vh;
+}
+
+.off-white h1 {
+  padding: 20px;
 }
 
 .button {
@@ -252,6 +271,7 @@ background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 9
   background-color: #773819;
   color: #e7e3e0;
   border: 2px solid #773819;
+  padding-right: 10px;
 }
 
 .button2:hover {
@@ -332,6 +352,7 @@ form{
 
 form p, form{
 margin-bottom:5px;
+text-align: center;
 }
 
 label{
@@ -357,6 +378,8 @@ box-sizing: border-box;
 
 .checkbox{
     width:30px;
+    text-align: left;
+
 }
 
 textarea{
@@ -374,14 +397,19 @@ box-sizing: border-box;
 
 
 
+
 footer{
     text-align: center;
     /* background-color: #4682b4; */
     /* opacity: 0.7; */
     padding-top: 20px;
-    color: white;
+    color: white !important;
     font-family: 'Josefin Sans';
     /* background-color: #e7e3e0; */
+}
+
+footer:hover {
+
 }
 
 
@@ -549,12 +577,12 @@ background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 9
 .products {
   background-color: white;
 
+
 }
 
 .products-img {
   width: 40%;
-  float: left;
-  margin-right: 15px;
+
 }
 
 .brown-shadow {
