--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ p {
     padding: 25px;
     padding-top: 0;
     text-align: center;
+
 }
 
 
@@ -256,7 +257,7 @@ background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 9
 }
 
 .button {
-  padding: 16px 32px;
+  padding: 16px 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -405,11 +406,15 @@ footer{
     padding-top: 20px;
     color: white !important;
     font-family: 'Josefin Sans';
-    /* background-color: #e7e3e0; */
+    background-color: #e7e3e0;
 }
 
 footer:hover {
 
+}
+
+.wrapper p {
+  color: #773819;
 }
 
 
@@ -550,8 +555,8 @@ background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 9
 
 
   p {
-    padding-right: 300px;
-    padding-left: 300px;
+    padding-right: 70px;
+    padding-left: 70px;
     text-align: left;
   }
 
@@ -576,12 +581,15 @@ background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 9
 
 .products {
   background-color: white;
+  display: inline-flex;
+  padding-bottom: 0;
 
 
 }
 
 .products-img {
-  width: 40%;
+  min-width: 250px;
+  min-height: 220px;
 
 }
 
@@ -637,11 +645,16 @@ text-align: left;
       margin-bottom: 2%;
   }
 
+  form p {
+    padding: 20px;
+  }
+
   .footer-nav {
     float: left;
     text-align: left;
     margin-left: 25px;
     }
+
 
   .footer-contact {
     float: right;
