--- a/styles.css
+++ b/styles.css
@@ -36,9 +36,9 @@ h2 {
   font-family: 'Barqish';
   text-align: center;
   /* padding: 20px; */
-  padding-bottom: 20px;
-  margin-top: 10px;
 
+  margin-top: 10px;
+  margin-bottom: 0;
   font-size: 3em;
   justify-content: center;
 
@@ -242,14 +242,15 @@ a.active {
 }
 
 .index-hero h2 {
-  text-shadow: 2px 2px 4px #773819;
+  text-shadow: 2px 3px 4px #552711;
 
 }
 
 .off-white {
   background: rgb(231,227,224);
 background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 98%, rgba(60,148,205,1) 100%);
-  height: 33vh;
+  height: 240px;
+
 }
 
 .off-white h1 {
@@ -269,9 +270,9 @@ background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 9
 }
 
 .button2 {
-  background-color: #773819;
-  color: #e7e3e0;
-  border: 2px solid #773819;
+  background-color: #ef7840;
+  color: white;
+  border: 2px solid #ef7840;
   padding-right: 10px;
 }
 
@@ -314,6 +315,12 @@ hr {
 
 .column {
     width: 100%;
+  }
+
+  .jars {
+    width: 200px;
+    text-align: left;
+    margin: auto;
   }
 
   .brown-text {
@@ -359,6 +366,7 @@ text-align: center;
 label{
 display:block;
 color: white;
+text-align: left;
 }
 
 #newsletter input{
@@ -394,7 +402,14 @@ border-radius: 4px;
 box-sizing: border-box;
 }
 
+#map a {
+  color: white;
 
+}
+
+#map a:hover {
+  color: #3c94cd;
+}
 
 
 
@@ -403,10 +418,11 @@ footer{
     text-align: center;
     /* background-color: #4682b4; */
     /* opacity: 0.7; */
-    padding-top: 20px;
-    color: white !important;
+    /* padding-top: 20px; */
+    color: #773819;
     font-family: 'Josefin Sans';
     background-color: #e7e3e0;
+    padding: 20px;
 }
 
 footer:hover {
@@ -415,6 +431,29 @@ footer:hover {
 
 .wrapper p {
   color: #773819;
+}
+
+.footer-grid {
+  display: grid;
+  grid-template-columns: 150px 1fr 150px;
+  grid-gap: 10px;
+  background-color: #e7e3e0;
+  color: #444;
+  margin: 20px;
+}
+
+.right {
+  text-align: right;
+  color: #773819;
+  font-size: 1.3em;
+}
+
+.left {
+  text-align: left;
+}
+}
+i{
+  text-align:right;
 }
 
 
