--- a/styles.css
+++ b/styles.css
@@ -249,7 +249,8 @@ a.active {
 .off-white {
   background: rgb(231,227,224);
 background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 98%, rgba(60,148,205,1) 100%);
-  height: 240px;
+  height: 265px;
+  padding: 5px;
 
 }
 
@@ -311,6 +312,7 @@ hr {
 .products-img {
   width: 100%;
   display: inline-block;
+  padding: 20px;
 }
 
 .column {
