--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,10 @@ background: radial-gradient(circle, rgba(239,121,65,1) 0%, rgba(119,56,25,1) 100
   background-color: red;
 
 }
-.red-banner a {
+.red-banner a p {
   color: white;
   text-align: center;
+  padding-top: 15px;
 
 }
 
