--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+/* @charset "utf-8"; */
 
 /* fonts */
 
@@ -8,7 +8,9 @@
    font-weight: normal;
  }
 
-
+html{
+    scroll-behavior: smooth;
+}
 
 /* MAIN CONTENT --------------------------------- */
 body{
@@ -21,14 +23,14 @@ background: radial-gradient(circle, rgba(239,121,65,1) 0%, rgba(119,56,25,1) 100
 }
 
 .red-banner {
-  background-color: red;
+  background-color: #ff000069;
 
 }
 .red-banner a p {
   color: white;
   text-align: center;
-  padding-top: 15px;
-
+  padding: 8px;
+  font-size: 0.9em;
 }
 
 * {
@@ -64,9 +66,9 @@ h3 {
 
 }
 
-p {
+p{
 	color: white;
-    font-size: 1em;
+    font-size: 1.2em;
     line-height: 1.5;
     font-family: 'Josefin Sans', sans-serif;
     padding: 25px;
@@ -113,16 +115,16 @@ input[type=submit] {
 
 }
 button[type=submit] {
- background-color: #3c94cd;
+ background-color: #fff;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 2px;
- color: #fff;
+ color: #000;
  font-family: 'Josefin Sans', sans-serif;
  font-size: 1em;
  text-decoration: none;
  border: none;
-
+display:inline-block;
 }
 
 
@@ -265,8 +267,8 @@ a.active {
 }
 
 .off-white {
-  background: rgb(231,227,224);
-background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 98%, rgba(60,148,205,1) 100%);
+  background: rgb(94, 164, 209);
+background: radial-gradient(circle, rgb(183, 205, 219) 0%, rgb(94, 164, 209) 98%, rgb(60, 148, 205) 100%);
   height: 325px;
   padding: 5px;
 
@@ -319,9 +321,12 @@ hr {
 
 .products2 {
       background-image: url("images/products.png");
-
+      /* height: 500px; */
+      display: block;
+      background-position: center;
+      background-size: cover;
 }
-.products {``
+.products {
 
 
     min-height:400px;
@@ -336,11 +341,10 @@ hr {
 }
 
 .products-img {
-  width: 80%;
-  display: inline-block;
-  padding: 20px 0 0 20px;
-  margin: auto;
-
+  /* width: 80%; */
+  display: block;
+  margin: 20px auto auto auto;
+border:3px solid rgba(119,56,25,1);
 }
 
 .column {
@@ -352,7 +356,10 @@ hr {
     text-align: left;
     margin: auto;
   }
-
+#products{
+    padding-bottom: 50px;
+    display: block;
+}
   .product-bkgd p{
     color: #773819;
     font-size: 3em;
@@ -367,12 +374,13 @@ hr {
 
   li {
     padding: 15px;
+
     align-items: center;
   }
 
   .blue-cover {
-    background: rgb(231,227,224);
-background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 98%, rgba(60,148,205,1) 100%);
+      background: rgb(94, 164, 209);
+    background: radial-gradient(circle, rgb(183, 205, 219) 0%, rgb(94, 164, 209) 98%, rgb(60, 148, 205) 100%);
 padding: 25px;
   }
 
@@ -393,7 +401,7 @@ form{
 
 form p, form{
 margin-bottom:5px;
-text-align: center;
+/* text-align: center; */
 }
 
 label{
@@ -425,8 +433,8 @@ box-sizing: border-box;
 }
 
 textarea{
-min-height:100px;
-width: 100%;
+min-height:150px;
+width: 80%;
 padding: 2%;
 margin: 1.5% 0;
 font-size: 1em;
@@ -456,6 +464,7 @@ footer{
     font-family: 'Josefin Sans';
     background-color: #e7e3e0;
     padding: 20px;
+    line-height: 1.3;
 }
 
 footer:hover {
@@ -466,7 +475,7 @@ footer:hover {
   color: #773819;
 }
 
-.footer p {
+footer p {
   color: #773819;
   text-align: center;
 }
@@ -489,7 +498,7 @@ footer:hover {
 .left {
   text-align: left;
 }
-}
+
 i{
   text-align:right;
 }
@@ -497,6 +506,8 @@ i{
 .about {
   margin: auto;
   padding: 25px;
+  width:90%;
+  max-width: 850px;
 }
 
 .small-col {
@@ -521,6 +532,9 @@ i{
 }
 .small-grid p{
   height:30px;
+  text-align: left;
+  font-size: 1em;
+  margin-left: 0 !important;
 }
 
 @media only screen and (min-width:400px){
@@ -638,7 +652,7 @@ DESKTOP STYLES
   display: flex;
   justify-content: center;
   font-size: 6em;
-  text-shadow: 2px 2px 4px #773819;
+  text-shadow: 2px 2px 12px #773819;
 }
 
   .orange-bar {
@@ -653,20 +667,20 @@ DESKTOP STYLES
       padding-top: 0px;
 
   }
-
+/*
   .off-white {
     background: rgb(231,227,224);
 background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 98%, rgba(60,148,205,1) 100%);
     height: 31vh;
-  }
+  } */
 
   #about {
-    padding-top: 20px;
+    padding-top: 90px;
 
   }
 
 
-  p {
+  p{
   text-align: left;
   }
 
@@ -695,6 +709,9 @@ background: radial-gradient(circle, rgba(231,227,224,1) 0%, rgba(94,164,209,1) 9
   min-height: auto;
 
 
+}
+.products2 {
+    /* height: 78vh; */
 }
 
 .products-img {
@@ -750,6 +767,10 @@ text-align: left;
   padding: 50px;
 }
 
+.blue-cover p{
+    max-width:850px;
+    margin:auto;
+}
 /* CONTACT ---------- */
 
   .wrapper2 {
@@ -803,10 +824,6 @@ text-align: left;
   }
 
 
-  .about {
-    padding-right: 120px;
-    padding-left: 120px
-  }
 
   .apple {
     height: 25px;
@@ -818,3 +835,4 @@ text-align: left;
     height: 25px;
     width: 15px;
   }
+}
