--- a/styles.css
+++ b/styles.css
@@ -269,7 +269,7 @@ a.active {
 .off-white {
   background: rgb(94, 164, 209);
 background: radial-gradient(circle, rgb(183, 205, 219) 0%, rgb(94, 164, 209) 98%, rgb(60, 148, 205) 100%);
-  height: 325px;
+  min-height: 325px;
   padding: 5px;
 
 }
@@ -341,7 +341,7 @@ hr {
 }
 
 .products-img {
-  /* width: 80%; */
+  width: 80%;
   display: block;
   margin: 20px auto auto auto;
 border:3px solid rgba(119,56,25,1);
@@ -434,7 +434,7 @@ box-sizing: border-box;
 
 textarea{
 min-height:150px;
-width: 80%;
+width: 100%;
 padding: 2%;
 margin: 1.5% 0;
 font-size: 1em;
@@ -481,7 +481,7 @@ footer p {
 }
 
 .footer-grid {
-  display: grid;
+  display: block;
   grid-template-columns: 150px 1fr 300px;
   grid-gap: 10px;
   background-color: #e7e3e0;
@@ -789,6 +789,9 @@ text-align: left;
   input{
       width:80%;
   }
+  textarea {
+    width: 80%;
+  }
   button{
       margin-top: 2%;
       margin-bottom: 2%;
@@ -821,6 +824,10 @@ text-align: left;
 
   footer{
     min-height: 150px;
+  }
+
+  .footer-grid {
+    display: grid;
   }
 
 
